[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
floem = { git = "https://github.com/lapce/floem"}
cosmic-text = { version = "0.12.1", features = ["shape-run-cache"] }
im = "15.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Document", "Window", "Element"] }
